Change --font-size-xxl variable

--- a/src/styles/design-tokens/typography.css
+++ b/src/styles/design-tokens/typography.css
@@ -1,12 +1,12 @@
 :root {
-  --font-family: "Inter", sans-serif;
+  --font-family-main: "Inter", sans-serif;
 
   --font-size-xs: 0.75rem;
   --font-size-sm: 0.875rem;
   --font-size-md: 1rem;
   --font-size-lg: 1.25rem;
   --font-size-xl: 1.5rem;
-  --font-size-xxl: 2rem;
+  --font-size-xxl: 3.2rem;
 
   --font-weight-normal: 400;
   --font-weight-medium: 500;
