--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -20,8 +20,17 @@ h1,
   top: 280px;
 }
 
-.firstPart {
+.blueSquare {
   width: 100%;
-  height: 455px;
+  height: 100vh;
   background-color: var(--color-primary);
+}
+
+.lucas_batista_logo {
+  position: absolute;
+  top: 335px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 90%;
+  height: auto;
 }
