--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -34,3 +34,13 @@ h1,
   width: 90%;
   height: auto;
 }
+
+.lucasBatistaFoto {
+  position: relative;
+  margin-top: 30px;
+  left: 25px;
+  width: 275px;
+  width: 50vh;
+  max-width: 280px;
+  height: auto;
+}
