--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -44,3 +44,16 @@ h1,
   max-width: 280px;
   height: auto;
 }
+
+h3 {
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-xl);
+  font-weight: var(--font-weight-bold);
+  line-height: 1.1;
+
+  color: var(--color-tertiary);
+
+  position: relative;
+  margin: 70px 0;
+  text-align: center;
+}
