Add  color-quaternary variable to color.css

--- a/src/styles/design-tokens/color.css
+++ b/src/styles/design-tokens/color.css
@@ -2,6 +2,7 @@
   --color-primary: #2c4e98;
   --color-secondary: #fff;
   --color-tertiary: #2e2f36;
+  --color-quaternary: #1f376d;
 
   --color-background: #e9eaf0;
 }
