Refactor ExperienciasCard component to use background image styling; update CSS for improved layout and hover effects.

--- a/src/components/experiencias/experienciasCard.css
+++ b/src/components/experiencias/experienciasCard.css
@@ -12,8 +12,7 @@
   margin-bottom: 20px;
 
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 
   border: none;
@@ -24,5 +23,34 @@
   cursor: pointer;
 }
 .experienciasCard:active {
-  background-color: var(--color-quaternary);
+  background-color: var(--color-secondary);
+}
+
+.experienciasCardText {
+  font-family: var(--font-family-main);
+  font-size: var(--font-size-lg);
+  font-weight: var(--font-weight-normal);
+  line-height: 1.1;
+
+  color: var(--color-tertiary);
+
+  width: 80%;
+  text-align: center;
+  word-wrap: break-word;
+  hyphens: auto;
+}
+
+.experienciasCard {
+  width: 80%;
+  height: 150px;
+  padding: 20px;
+  margin-bottom: 20px;
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: none;
+  transition: 100ms;
 }
