Add black transparent color variable to color.css for improved styling options

--- a/src/styles/design-tokens/color.css
+++ b/src/styles/design-tokens/color.css
@@ -3,6 +3,7 @@
   --color-secondary: #fff;
   --color-tertiary: #2e2f36;
   --color-quaternary: #1f376d;
+  --color-black-transparent: rgba(0, 0, 0, 0.5);
 
   --color-background: #e9eaf0;
 }
