--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -17,8 +17,10 @@
   background: var(--color-secondary);
   padding: 20px 30px;
   text-align: center;
-  max-width: 400px;
+  max-width: 600px;
   width: 90%;
+  max-height: 80vh;
+  overflow-y: auto;
 
   font-family: var(--font-family-main);
   font-size: var(--font-size-md);
