--- a/src/components/livro/livro.css
+++ b/src/components/livro/livro.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* padding: 20px; */
+  margin-bottom: 50px;
 }
 
 .imageLivroSection {
