Add ContatoSection component with contact icons and improved layout

--- a/src/components/contato/contato.css
+++ b/src/components/contato/contato.css
@@ -10,4 +10,21 @@
   gap: 20px;
 
   background-color: var(--color-primary);
+  padding-bottom: 40px;
+  margin-bottom: 10px;
+}
+
+.contatoLinks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
+
+  width: 80%;
+}
+
+.iconStyle {
+  width: 50px;
+  height: 50px;
 }
