--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -52,6 +52,6 @@ h3 {
   color: var(--color-tertiary);
 
   position: relative;
-  margin: 50px 0;
+  margin: 40px 0 30px 0;
   text-align: center;
 }
