--- a/src/components/experiencias/experienciasCard.css
+++ b/src/components/experiencias/experienciasCard.css
@@ -65,3 +65,13 @@
   height: auto;
   margin: 5px 0 20px 0;
 }
+
+.openIcon {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 15px;
+  height: auto;
+  z-index: 3; /* acima do overlay e do texto */
+  opacity: 0.8;
+}
