--- a/src/components/servicoCard/servicoCard.css
+++ b/src/components/servicoCard/servicoCard.css
@@ -19,6 +19,7 @@
 
   border: none;
   transition: 100ms;
+  position: relative;
 }
 
 .servicoCard:hover {
@@ -48,85 +49,12 @@
   hyphens: auto;
 }
 
-/* pop up ----------------------------------------- */
-
-/*
-.popupOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--color-black-transparent);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1001;
-
-  transition: opacity 0.5s ease-in-out;
-}
-
-.popupContent {
-  background: white;
-  padding: 20px 30px;
-  text-align: center;
-  max-width: 400px;
-  width: 90%;
-}
-
-.popupContent h2 {
-  margin-bottom: 15px;
-  font-family: var(--font-family-main);
-  color: var(--color-primary);
-  font-weight: var(--font-weight-bold);
-}
-
-.popupContent button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: var(--color-tertiary);
-  color: var(--color-secondary);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  overflow-y: auto;
-}
-
-.popupContent button:hover {
-  background-color: var(--color-secondary);
-}
-
-.popupText {
-  font-family: var(--font-family-main);
-  font-size: var(--font-size-md);
-  font-weight: var(--font-weight-normal);
-  line-height: 1.1;
-
-  color: var(--color-tertiary);
-
-  width: 100%;
-  text-align: center;
-  word-wrap: break-word;
-  hyphens: auto;
-}
-
-.closeButton {
+.openIcon {
   position: absolute;
-  top: 10px;
-  right: 15px;
-  background: transparent;
-  border: none;
-  font-size: 24px;
-  font-weight: bold;
-  color: var(--color-tertiary);
-  cursor: pointer;
+  top: 5px;
+  left: 5px;
+  width: 15px;
+  height: 15px;
+  z-index: 2;
+  opacity: 0.8;
 }
-
-.closeButton:hover {
-  color: var(--color-primary);
-}
-
-.no-scroll {
-  overflow: hidden;
-}
-*/
