--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -7,40 +7,55 @@ h1,
 
   color: var(--color-secondary);
 
-  position: absolute;
-  top: 150px;
-  left: 25px;
+  margin-top: 50px;
 }
 
 .subtitle {
   font-size: var(--font-size-lg);
-
-  top: 280px;
+  margin-top: 20px;
 }
 
 .blueSquare {
   width: 100%;
   height: 100vh;
   background-color: var(--color-primary);
+  padding-left: 5%;
+  margin-bottom: 25px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.containerBlueSquare {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-around;
+}
+
+.lucas_batista_logo_tablet {
+  display: none;
 }
 
 .lucas_batista_logo {
-  position: absolute;
-  top: 335px;
-  left: 50%;
-  transform: translateX(-50%);
+  position: relative;
   width: 90%;
   height: auto;
+  margin-top: 150px;
 }
 
 .lucasBatistaFoto {
   position: relative;
-  margin-top: 30px;
-  left: 25px;
   width: 275px;
   width: 50vh;
   max-width: 280px;
   height: auto;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h3 {
@@ -54,4 +69,35 @@ h3 {
   position: relative;
   margin: 40px 0 30px 0;
   text-align: center;
+}
+
+@media (min-width: 768px) {
+  .blueSquare {
+    width: 45%;
+    height: 55vh;
+  }
+
+  .hospitalDesenhoEsquematicoTablet {
+    display: block;
+  }
+
+  .lucas_batista_logo {
+    display: none;
+  }
+
+  .lucas_batista_logo_tablet {
+    display: block;
+    position: absolute;
+    top: 15vh;
+
+    width: 48%;
+    left: 50%;
+  }
+
+  .lucasBatistaFoto {
+    margin-top: -10vh;
+    width: 100%;
+    max-width: 350px;
+    left: -10%;
+  }
 }
