--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -33,9 +33,14 @@
   transform: scale(0.9);
 }
 
-.menuHamburger {
+.menuHamburger,
+.menuHamburgerblue {
   width: 50px;
   height: 50px;
+}
+
+.menuHamburgerblue {
+  display: none;
 }
 
 /* menu pop up ------------- */
@@ -84,4 +89,14 @@
   border: none;
   color: white;
   cursor: pointer;
+}
+
+@media (min-width: 768px) {
+  .menuHamburger {
+    display: none;
+  }
+
+  .menuHamburgerblue {
+    display: block;
+  }
 }
