--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -71,7 +71,7 @@ h3 {
   text-align: center;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) {}
   .blueSquare {
     width: 45%;
     height: 55vh;
