--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -69,9 +69,10 @@ h3 {
   position: relative;
   margin: 40px 0 30px 0;
   text-align: center;
+  padding: 0 20%;
 }
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
   .blueSquare {
     width: 45%;
     height: 55vh;
@@ -99,5 +100,11 @@ h3 {
     width: 100%;
     max-width: 350px;
     left: -10%;
+  }
+}
+
+@media (min-width: 768px) {
+  h3 {
+    padding-top: 60px;
   }
 }
