--- a/src/components/livro/livro.css
+++ b/src/components/livro/livro.css
@@ -6,6 +6,13 @@
   margin-bottom: 50px;
 }
 
+.textButtonLivroSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .imageLivroSection {
   width: 70%;
   height: auto;
@@ -14,7 +21,7 @@
 
 .textLivroSection {
   width: 70%;
-  max-width: 300px;
+  max-width: 600px;
   height: auto;
   text-align: center;
 
@@ -23,4 +30,16 @@
   color: var(--color-tertiary);
 
   margin: 20px 0;
+}
+
+@media (min-width: 768px) {
+  .containerLivroSection {
+    flex-direction: row-reverse;
+    justify-content: center;
+    padding: 0 5%;
+  }
+
+  .textButtonLivroSection {
+    max-width: 500px;
+  }
 }
