--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -16,11 +16,13 @@ h1,
 }
 
 .blueSquare {
+  position: relative;
   width: 100%;
   height: 100vh;
   background-color: var(--color-primary);
   padding-left: 5%;
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
+  /* padding-top: 700px; */
 
   display: flex;
   flex-direction: column;
@@ -33,6 +35,19 @@ h1,
   flex-direction: column;
   align-items: start;
   justify-content: space-around;
+}
+
+@media (min-width: 400px) and (max-width: 768px) {
+  .containerBlueSquare {
+    position: absolute;
+    top: 70px;
+  }
+
+  .lucas_batista_logo {
+    position: absolute;
+    top: 100px;
+    max-width: 450px;
+  }
 }
 
 .lucas_batista_logo_tablet {
@@ -56,6 +71,7 @@ h1,
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10px;
 }
 
 h3 {
@@ -93,13 +109,14 @@ h3 {
 
     width: 48%;
     left: 50%;
+    max-width: 700px;
   }
 
   .lucasBatistaFoto {
     margin-top: -10vh;
     width: 100%;
     width: 35vw;
-    max-width: 350px;
+    max-width: 280px;
     left: -10%;
   }
   h3 {
@@ -110,7 +127,8 @@ h3 {
 @media (min-width: 1024px) {
   .blueSquare {
     height: 80vh;
-    padding-left: 18vw;
+    padding-right: 100px;
+    align-items: flex-end;
   }
 
   h1,
