--- a/src/components/experiencias/experienciasCard.css
+++ b/src/components/experiencias/experienciasCard.css
@@ -45,8 +45,12 @@
 
   border: none;
   transition: 100ms;
+  transition: transform 0.2s ease-in-out;
 }
 
+.experienciasCard:hover {
+  transform: scale(1.03);
+}
 .backgroundOverlay {
   position: absolute;
   top: 0;
@@ -58,6 +62,7 @@
   background-position: center;
   opacity: 0.3;
   z-index: 1;
+  border-radius: 7px;
 }
 
 .experienciasImage {
