--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -111,7 +111,7 @@
   }
 
   .header {
-    max-width: 1920px;
+    max-width: 1600px;
     padding-left: 50px;
     padding-right: 50px;
 
@@ -145,10 +145,12 @@
     color: var(--color-tertiary);
     text-decoration: none;
     /* background-color: red; */
+    transition: 0.2s ease-in-out;
   }
 
   .menuText:hover {
-    color: var(--color-quaternary);
+    color: var(--color-primary);
     text-decoration: underline;
+    transform: scale(1.03);
   }
 }
