--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -15,6 +15,7 @@
 
 .popupContent {
   background: var(--color-secondary);
+  border-radius: 7px;
   padding: 20px 30px;
   text-align: center;
   max-width: 600px;
