--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -4,6 +4,7 @@ h1,
   font-size: var(--font-size-xxl);
   font-weight: var(--font-weight-bold);
   line-height: 1.1;
+  text-align: center;
 
   color: var(--color-secondary);
 
@@ -21,18 +22,17 @@ h1,
   width: 100%;
   height: 100vh;
   background-color: var(--color-primary);
-  padding-left: 5%;
 
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   justify-content: center;
 }
 
 .containerBlueSquare {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   justify-content: space-around;
 }
 
@@ -89,9 +89,17 @@ h3 {
 }
 
 @media (min-width: 768px) {
+  h1 {
+    text-align: start;
+  }
+
   .blueSquare {
     width: 45%;
     height: 55vh;
+  }
+
+  .containerBlueSquare {
+    align-items: start;
   }
 
   .hospitalDesenhoEsquematicoTablet {
