--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -37,15 +37,12 @@ h1,
 }
 
 @media (min-width: 400px) and (max-width: 768px) {
-  .containerBlueSquare {
-    position: absolute;
-    top: 70px;
-  }
-
   .lucas_batista_logo {
     position: absolute;
     top: 100px;
     max-width: 450px;
+
+    display: none;
   }
 }
 
