--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -129,16 +129,19 @@
     align-items: center;
     width: 1000px;
     max-width: 500px;
+    height: 50px;
     position: absolute;
     right: 5%;
     list-style: none;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 5px;
 
     font-family: var(--font-family-main);
     font-size: var(--font-size-lg);
     font-weight: var(--font-weight-medium);
 
     top: 40px;
-    right: 0;
+    right: 10px;
   }
 
   .menuText {
