--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,6 +10,10 @@
   z-index: 1000;
 }
 
+.body-no-scroll {
+  overflow: hidden;
+}
+
 .header-logo {
   width: 60px;
   height: auto;
@@ -78,17 +82,6 @@
   font-size: 1.8rem;
   text-decoration: none;
   font-weight: bold;
-}
-
-.fechar-menu {
-  position: absolute;
-  top: 100px;
-  right: 40px;
-  font-size: 2rem;
-  background: none;
-  border: none;
-  color: white;
-  cursor: pointer;
 }
 
 .menuContainerText {
